--- a/src/components/Products/_Products.scss
+++ b/src/components/Products/_Products.scss
@@ -2,4 +2,9 @@
 
 .products {
     padding: 12rem 2rem 5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    gap: 2rem;
+    max-width: 1140px;
+    margin: 0 auto;
 }
