--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -1,4 +1,5 @@
 @import '../../styles/theme';
+@import '../../styles/mixin';
 
 header {
     position: fixed;
@@ -15,6 +16,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 3rem;
+    @include center;
 }
 
 .cart-btn {
