--- a/src/components/Products/_Products.scss
+++ b/src/components/Products/_Products.scss
@@ -1,10 +1,10 @@
 @import '../../styles/theme';
+@import '../../styles/mixin';
 
 .products {
     padding: 12rem 2rem 5rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
     gap: 2rem;
-    max-width: 1140px;
-    margin: 0 auto;
+    @include center;
 }
