style: changed cursor on product card

--- a/src/components/ProductCard/_ProductCard.scss
+++ b/src/components/ProductCard/_ProductCard.scss
@@ -8,7 +8,7 @@
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    cursor: pointer;
+    cursor: default;
     position: relative;
     overflow: hidden;
     z-index: 1;
